add_library(tiary_common
	algorithm.h
	algorithm.cpp
	bzip2.h
	bzip2.cpp
	callback.h
	container_of.h
	containers.h
	datetime.h
	datetime.cpp
	datetime_format.cpp
	debuglog.h
	debuglog.cpp
	dir.h
	dir.cpp
	external.h
	external.cpp
	format.h
	format.cpp
	md5.h
	md5.cpp
	misc.h
	misc.cpp
	noncopyable.h
	pcre.h
	pcre.cpp
	query.h
	signal.h
	signal.cpp
	static_assert.h
	string.h
	string.cpp
	string_match.h
	string_match.cpp
	types.h
	unicode.h
	unicode.cpp
	xml.h
	xml.cpp
)
