add_library(tiary_common STATIC
	action.h
	algorithm.h
	algorithm.cpp
	bswap.h
	bzip2.h
	bzip2.cpp
	callback.h
	condition.h
	condition.cpp
	container_of.h
	containers.h
	datetime.h
	datetime.cpp
	datetime_format.cpp
	debuglog.h
	debuglog.cpp
	dir.h
	dir.cpp
	external.h
	external.cpp
	format.h
	format.cpp
	hash64.h
	hash64.cpp
	iterator.h
	md5.h
	md5.cpp
	misc.h
	misc.cpp
	pcre.h
	pcre.cpp
	signal.h
	signal.cpp
	split_line.h
	split_line.cpp
	static_assert.h
	string.h
	string.cpp
	string_match.h
	string_match.cpp
	types.h
	unicode.h
	unicode.cpp
	xml.h
	xml.cpp
)
