# /***********************************************************************
#  *
#  * Tiary, a terminal-based diary keeping system for Unix-like systems
#  * Copyright (C) 2009, 2010, 2011, 2012, 2014, 2018,
#  * chys <admin@CHYS.INFO>
#  *
#  * This software is licensed under the 3-clause BSD license.
#  * See LICENSE in the source package and/or online info for details.
#  *
#  **********************************************************************/



AM_CPPFLAGS = -I$(top_builddir)/src -I$(top_srcdir)/src

noinst_LIBRARIES = libcommon.a

libcommon_a_SOURCES = \
	action.h \
	algorithm.h \
	algorithm.cpp \
	bswap.h \
	bzip2.h \
	bzip2.cpp \
	condition.h \
	condition.cpp \
	containers.h \
	datetime.h \
	datetime.cpp \
	datetime_format.cpp \
	debuglog.h \
	debuglog.cpp \
	dir.h \
	dir.cpp \
	external.h \
	external.cpp \
	format.h \
	format.cpp \
	hash64.h \
	hash64.cpp \
	iterator.h \
	md5.h \
	md5.cpp \
	misc.h \
	misc.cpp \
	pcre.h \
	pcre.cpp \
	signal.h \
	signal.cpp \
	split_line.h \
	split_line.cpp \
	string.h \
	string.cpp \
	string_match.h \
	string_match.cpp \
	unicode.h \
	unicode.cpp \
	xml.h \
	xml.cpp
